# fleet-watch

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  WORKFLOW.md  com.cds.fleet-watch.plist  pyproject.toml
.github/workflows/: ci.yml  publish.yml
fleet_watch/: __init__.py  autonomous.py  cli.py  discover.py  events.py  gpu_estimator.py  referee.py  registry.py  reporter.py  runaway.py  syshealth.py
tests/: test_adversarial.py  test_autonomous.py  test_cli.py  test_contracts.py  test_discover.py  test_events.py  test_fleet_guard_hook.py  test_gpu_estimator.py  test_referee.py  test_registry.py  test_reporter.py  test_runaway.py  test_syshealth.py
